--- a/03-natural.Rmd
+++ b/03-natural.Rmd
@@ -3,14 +3,14 @@
 ## Comparative effectivness of two medications for opioid use disorder (OUD)
 
 ```{r pressure, echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img/ctndag.pdf"))
+knitr::include_graphics(here::here("img", "ctndag.pdf"))
 ```
 
 _Motivation_: Opposite overall treatment effects for homeless versus
 nonhomeless participants.
 
 ```{r , echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img/tmleesttotal.pdf"))
+knitr::include_graphics(here::here("img", "tmleesttotal.pdf"))
 ```
 
 ### Getting specific about the question
@@ -38,4 +38,3 @@ $\rightarrow$ So, _not_ natural (in)direct effects.
    - Direct effect: $\E(Y_{1,g_0} - Y_{0,g_0})$
    - Indirect effect: $\E(Y_{1,g_1} - Y_{1,g_0})$
 - Need to incorporate multiple and continuous mediators
-
