fix latex macros in preamble

--- a/latex_extras/preamble.tex
+++ b/latex_extras/preamble.tex
@@ -113,6 +113,7 @@
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\R}{\mathbb{R}}
 \renewcommand{\rmdefault}{ptm}
+\newcommand{\I}{\mathbb{I}}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\M}{\mathcal{M}}
 \newcommand{\1}{\mathbbm{1}}
