--- a/index.Rmd
+++ b/index.Rmd
@@ -77,13 +77,15 @@ __NOTE: All times listed in Pacific Time.__
 
 ### Iván Díaz {-}
 
-My research focuses on the development of non-parametric statistical methods for
-causal inference from observational and randomized studies with complex
-datasets, using machine learning. This includes but is not limited to mediation
-analysis, methods for continuous exposures, longitudinal data including survival
-analysis, and efficiency guarantees with covariate adjustment in randomized
-trials. I am also interested in general semi-parametric theory, machine
-learning, and high-dimensional data.
+I am an Assistant Professor at Weill Cornel Medicine. My research
+focuses on the development of non-parametric statistical methods for
+causal inference from observational and randomized studies with
+complex datasets, using machine learning. This includes but is not
+limited to mediation analysis, methods for continuous exposures,
+longitudinal data including survival analysis, and efficiency
+guarantees with covariate adjustment in randomized trials. I am also
+interested in general semi-parametric theory, machine learning, and
+high-dimensional data.
 
 ### Nima Hejazi {-}
 
