--- a/packages.bib
+++ b/packages.bib
@@ -3,32 +3,30 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2021},
+  year = {2020},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
+  note = {https://github.com/rstudio/bookdown, https://pkgs.rstudio.com/bookdown/},
   year = {2021},
-  note = {R package version 0.21.6},
-  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.31},
+  note = {R package version 1.32},
   url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  note = {https://github.com/rstudio/rmarkdown, https://pkgs.rstudio.com/rmarkdown/},
   year = {2021},
-  note = {https://rmarkdown.rstudio.com/docs/,
-https://github.com/rstudio/rmarkdown},
 }
 
 @Book{bookdown2016,
@@ -38,7 +36,7 @@ https://github.com/rstudio/rmarkdown},
   address = {Boca Raton, Florida},
   year = {2016},
   note = {ISBN 978-1138700109},
-  url = {https://github.com/rstudio/bookdown},
+  url = {https://bookdown.org/yihui/bookdown},
 }
 
 @Book{knitr2015,
